--- a/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
+++ b/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
@@ -26,32 +26,146 @@
     "The backend API handles all interactions using GET, POST, PUT, and DELETE methods, ensuring seamless data management. \n",
     "<img src=\"{{site.baseurl}}/images/dbfeaturess.PNG\" alt=\"GET\" class=\"pic\">\n",
     "\n",
+    "### JavaScript Methods in the Quote Management App\n",
     "\n",
-    "#### Get Request to Display Datatable\n",
-    "<img src=\"{{site.baseurl}}/images/getfrontend.PNG\" alt=\"GET\" class=\"pic\">\n",
-    "Sends a GET request to the API_URL endpoint to fetch all quotes.\n",
-    "Awaits the API response, which returns a JSON object containing an array of quote records. The data is transferred with JSON using jsonify(), which converts Python objects like dictionaries or lists into a JSON-formatted response that the frontend can easily process. 🚀\n",
-    "Dynamically adds a new row for each quote fetched.\n",
+    "This script manages user quotes through CRUD (Create, Read, Update, Delete) operations using a REST API.  \n",
+    "Data is sent and received in **JSON (JavaScript Object Notation)** format.\n",
     "\n",
+    "#### 1. `fetchQuotes()`\n",
+    "- **Purpose**: Fetches and displays quotes from the API.\n",
+    "- **Process**:\n",
+    "  - Sends a `GET` request to `API_URL`.\n",
+    "  - Parses the **JSON** response containing an array of quotes.\n",
+    "  - Iterates through the quotes and dynamically updates the HTML table.\n",
+    "  - Each row includes an \"Edit\" and \"Delete\" button.\n",
+    "\n",
+    "#### 2. `addQuote(event)`\n",
+    "- **Purpose**: Adds a new quote to the database.\n",
+    "- **Process**:\n",
+    "  - Prevents form default submission with `event.preventDefault()`.\n",
+    "  - Reads input values (author, quote, date).\n",
+    "  - Converts data into a **JSON object** and sends a `POST` request.\n",
+    "  - If successful, the new quote is added, and the form is reset.\n",
+    "\n",
+    "#### 3. `deleteQuote(id)`\n",
+    "- **Purpose**: Deletes a quote based on its ID.\n",
+    "- **Process**:\n",
+    "  - Sends a `DELETE` request to remove the quote.\n",
+    "  - If successful, the user is alerted, and `fetchQuotes()` refreshes the table.\n",
+    "\n",
+    "#### 4. `editQuote(id, currentAuthor, currentQuote, currentDate)`\n",
+    "- **Purpose**: Prepares the form to edit an existing quote.\n",
+    "- **Process**:\n",
+    "  - Switches from \"Add\" mode to \"Edit\" mode.\n",
+    "  - Pre-fills the form fields with the current quote's data.\n",
+    "  - Overrides form submission to send an updated **JSON object** via a `PUT` request.\n",
+    "\n",
+    "#### 5. `cancelEdit()`\n",
+    "- **Purpose**: Cancels the edit mode and returns to the add form.\n",
+    "- **Process**:\n",
+    "  - Hides the edit form and shows the add form.\n",
+    "  - Resets the edit form fields.\n",
+    "\n",
+    "#### 6. `init()`\n",
+    "- **Purpose**: Initializes the app on page load.\n",
+    "- **Process**:\n",
+    "  - Attaches the `addQuote()` function to the form’s submit event.\n",
+    "  - Calls `fetchQuotes()` to load existing quotes.\n",
+    "\n",
+    "#### 7. `DOMContentLoaded` Event Listener\n",
+    "- Ensures `init()` runs after the document is fully loaded.\n",
+    "\n",
+    "### JSON Usage in This Script\n",
+    "- **Sending Data**: Quotes are converted into a JSON object (`JSON.stringify({ author, quote, date })`) before sending via `POST` or `PUT` requests.\n",
+    "- **Receiving Data**: The server response is parsed as JSON (`await response.json()`) to dynamically update the UI.\n",
+    "- **API Communication**: The script uses **fetch API** to interact with a backend that processes and stores JSON-formatted quotes.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Flask API for Quote Management\n",
+    "\n",
+    "This Flask API handles CRUD (Create, Read, Update, Delete) operations for user quotes.  \n",
+    "Data is exchanged in **JSON format**, and `jsonify` is used to return JSON responses.\n",
+    "\n",
+    "#### 1. `@userquotes.route('/api/userquotes', methods=['POST'])`\n",
+    "- **Purpose**: Adds a new quote to the database.\n",
+    "- **Process**:\n",
+    "  - Retrieves JSON data from the request using `request.get_json()`.\n",
+    "  - Extracts `author`, `quote`, and `date` fields.\n",
+    "  - Returns an error if any required field is missing (`400 Bad Request`).\n",
+    "  - Creates a new `Quotes` object and adds it to the database.\n",
+    "  - Uses `jsonify()` to return a success message in **JSON format** (`201 Created`).\n",
+    "\n",
+    "#### 2. `@userquotes.route('/api/userquotes', methods=['GET'])`\n",
+    "- **Purpose**: Retrieves all quotes from the database.\n",
+    "- **Process**:\n",
+    "  - Queries all quotes from the `Quotes` table.\n",
+    "  - Converts each quote object into a **JSON-compatible dictionary**.\n",
+    "  - Uses `jsonify()` to return a **list of quotes** (`200 OK`).\n",
     "<img src=\"{{site.baseurl}}/images/getmethoddb.PNG\" alt=\"GET\" class=\"pic\">\n",
     "\n",
-    "### User Actions\n",
-    "There is a table that allows the user the input a quote, author and date. The POST method allows it to add a new row to the database with the data that the user added. \n",
-    "The database also has edit and delete options. \n",
-    "#### Edit (PUT)\n",
-    "When the edit button is clicked, the user inputs new data for the quote, author, or date and the PUT method allows him to change the contents in the database without adding a new row. First, it extracts the updated quote details from the request. Then, it alidates input and ensures the quote exists. After that, it updates the database and commits the changes. Finally, it returns a JSON response confirming success or an appropriate error message.\n",
+    "#### 3. `@userquotes.route('/api/userquotes/<int:id>', methods=['DELETE'])`\n",
+    "- **Purpose**: Deletes a quote by its ID.\n",
+    "- **Process**:\n",
+    "  - Searches for the quote using `Quotes.query.get(id)`.\n",
+    "  - If the quote doesn’t exist, returns a JSON error (`404 Not Found`).\n",
+    "  - If found, deletes it from the database and commits changes.\n",
+    "  - Uses `jsonify()` to return a success message (`200 OK`).\n",
+    "<img src=\"{{site.baseurl}}/images/deletemethod.PNG\" alt=\"DELETE\" class=\"pic\">\n",
+    "\n",
+    "#### 4. `@userquotes.route('/api/userquotes/<int:id>', methods=['PUT'])`\n",
+    "- **Purpose**: Updates an existing quote by ID.\n",
+    "- **Process**:\n",
+    "  - Retrieves JSON data using `request.get_json()`.\n",
+    "  - Extracts `author`, `quote`, and `date` fields.\n",
+    "  - If any field is missing, returns a JSON error (`400 Bad Request`).\n",
+    "  - Searches for the existing quote in the database.\n",
+    "  - If the quote is not found, returns a JSON error (`404 Not Found`).\n",
+    "  - Updates the quote’s fields and commits the changes.\n",
+    "  - Uses `jsonify()` to return a success message (`200 OK`).\n",
     "<img src=\"{{site.baseurl}}/images/putmethod.PNG\" alt=\"PUT\" class=\"pic\">\n",
     "\n",
-    "#### DELETE\n",
-    "The delete button uses the DELETE method to delete a specific quote and the whole row by its ID and returns a success or error message in JSON format.\n",
-    "<img src=\"{{site.baseurl}}/images/deletemethod.PNG\" alt=\"DELETE\" class=\"pic\">\n",
+    "### JSON and `jsonify` in This API\n",
+    "- **Receiving JSON**: The API uses `request.get_json()` to parse incoming JSON data from clients.\n",
+    "- **Returning JSON**: Responses are formatted with `jsonify()` to ensure correct JSON formatting.\n",
+    "- **Error Handling**: Errors return JSON objects with error messages and appropriate HTTP status codes.\n",
+    "\n",
+    "### API Endpoints Summary\n",
+    "| Method | Endpoint | Description |\n",
+    "|--------|----------|-------------|\n",
+    "| `POST` | `/api/userquotes` | Add a new quote (expects JSON data). |\n",
+    "| `GET` | `/api/userquotes` | Retrieve all quotes in JSON format. |\n",
+    "| `DELETE` | `/api/userquotes/<id>` | Delete a specific quote by ID. |\n",
+    "| `PUT` | `/api/userquotes/<id>` | Update a quote by ID (expects JSON data). |\n",
+    "\n",
+    "\n",
+    "## Backend: Database Model and Initialization\n",
+    "\n",
+    "The backend uses **Flask-SQLAlchemy** to define and manage a database table for storing quotes. The `Quotes` class represents a database model, and the `initquotes()` function initializes the table with sample data.\n",
+    "\n",
+    "### **1. Quotes Model**\n",
+    "The `Quotes` class is a database table for storing user quotes. It has the following attributes:\n",
+    "- `id`: A unique identifier (Primary Key).\n",
+    "- `_author`: The name of the person who said the quote.\n",
+    "- `_quote`: The actual quote text.\n",
+    "- `_date`: The year the quote was said.\n",
+    "\n",
+    "The model also includes methods for CRUD (Create, Read, Update, Delete) operations, making it easy to manage quotes.\n",
+    "\n",
+    "### **2. Database Initialization with `initquotes()`**\n",
+    "The function `initquotes()` ensures that the database is properly set up and pre-populated with quotes.\n",
+    "\n",
+    "#### **How It Works**\n",
+    "1. Calls `db.create_all()` to **create the `user_quotes` table** if it doesn’t exist.\n",
+    "2. Adds **predefined quotes** (e.g., from Albert Einstein, Gandhi).\n",
+    "3. Uses `.create()` method to insert them into the database.\n",
+    "4. Handles errors like duplicate entries using `IntegrityError`.\n",
     "\n",
     "### Data creation and Data recovery\n",
     "I am able to run db_init, db_restore, db_backup to initialize, backup, and restore my database table.\n",
     "<img src=\"{{site.baseurl}}/images/db_init.PNG\" alt=\"init\" class=\"pic\">\n",
     "<img src=\"{{site.baseurl}}/images/db_backup.PNG\" alt=\"backup\" class=\"pic\">\n",
-    "<img src=\"{{site.baseurl}}/images/db_restore.PNG\" alt=\"restore\" class=\"pic\">\n",
-    "\n"
+    "<img src=\"{{site.baseurl}}/images/db_restore.PNG\" alt=\"restore\" class=\"pic\">"
    ]
   }
  ],
