--- a/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
+++ b/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
@@ -101,7 +101,7 @@
     "- **Process**:\n",
     "  - Queries all quotes from the `Quotes` table.\n",
     "  - Converts each quote object into a **JSON-compatible dictionary**.\n",
-    "  - Uses `jsonify()` to return a **list of quotes** (`200 OK`).\n",
+    "  - Uses `jsonify()` to return a **list of dictionaries** with the id, quote, author, and date (`200 OK`).\n",
     "<img src=\"{{site.baseurl}}/images/getmethoddb.PNG\" alt=\"GET\" class=\"pic\">\n",
     "\n",
     "#### 3. `@userquotes.route('/api/userquotes/<int:id>', methods=['DELETE'])`\n",
