--- a/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
+++ b/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
@@ -165,11 +165,44 @@
     "3. Uses `.create()` method to insert them into the database.\n",
     "4. Handles errors like duplicate entries using `IntegrityError`.\n",
     "\n",
+    "## Alignment with AP Computer Science Principles (AP CSP) Requirements  \n",
+    "\n",
+    "The **Quote Manager** feature in StudyBuddy aligns with the **AP Computer Science Principles (AP CSP)** framework by incorporating key computing concepts under the **Big Ideas**:  \n",
+    "\n",
+    "### **Big Idea 2: Abstraction**  \n",
+    "- Uses **Flask-SQLAlchemy** to structure and manage quotes in a relational database.  \n",
+    "- Separates frontend and backend logic, enabling modular and scalable code.  \n",
+    "\n",
+    "### **Big Idea 3: Data & Information**  \n",
+    "- Stores, retrieves, and processes user-generated quotes using a **structured database model**.  \n",
+    "- Implements **JSON formatting** for data transmission between the client and server.  \n",
+    "- Provides database backup, restore, and initialization functionalities.  \n",
+    "\n",
+    "### **Big Idea 4: Algorithms & Programming**  \n",
+    "- Implements **CRUD operations** (Create, Read, Update, Delete) using JavaScript functions and a REST API.  \n",
+    "- Uses **loops, conditionals, and functions** to handle UI updates dynamically.  \n",
+    "- Ensures efficient **state management** (e.g., switching between \"add\" and \"edit\" modes).  \n",
+    "\n",
+    "### **Big Idea 5: Computer Systems & Networks**  \n",
+    "- Uses **HTTP methods** (`GET`, `POST`, `PUT`, `DELETE`) to interact with the backend API.  \n",
+    "- Implements **server-side processing** with Flask to handle database transactions.  \n",
+    "\n",
+    "### **Big Idea 6: Impact of Computing**  \n",
+    "- Enhances the user experience by providing an **interactive and organized** platform for managing quotes.  \n",
+    "- Implements **error handling** and validation to improve data integrity and usability.  \n",
+    "- Demonstrates how software can support education and personal organization.  \n",
+    "\n",
+    "### **Create Performance Task Readiness**  \n",
+    "- Showcases **program development, functionality, and data management**, fulfilling AP CSP’s **Create Task** requirements.  \n",
+    "- Demonstrates how computing enhances productivity and learning through an interactive web application.  \n",
+    "\n",
+    "\n",
+    "\n",
     "### Data creation and Data recovery\n",
     "I am able to run db_init, db_restore, db_backup to initialize, backup, and restore my database table.\n",
     "<img src=\"{{site.baseurl}}/images/db_init.PNG\" alt=\"init\" class=\"pic\">\n",
     "<img src=\"{{site.baseurl}}/images/db_backup.PNG\" alt=\"backup\" class=\"pic\">\n",
-    "<img src=\"{{site.baseurl}}/images/db_restore.PNG\" alt=\"restore\" class=\"pic\">"
+    "<img src=\"{{site.baseurl}}/images/db_restore.PNG\" alt=\"restore\" class=\"pic\">\n"
    ]
   }
  ],
