--- a/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
+++ b/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
@@ -165,7 +165,7 @@
     "3. Uses `.create()` method to insert them into the database.\n",
     "4. Handles errors like duplicate entries using `IntegrityError`.\n",
     "\n",
-    "## Alignment with AP Computer Science Principles (AP CSP) Requirements  \n",
+    "## Alignment with AP Computer Science Principles (AP CSP) CollegeBoard Requirements  \n",
     "\n",
     "The **Quote Manager** feature in StudyBuddy aligns with the **AP Computer Science Principles (AP CSP)** framework by incorporating key computing concepts under the **Big Ideas**:  \n",
     "\n",
