--- a/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
+++ b/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
@@ -128,20 +128,6 @@
     "  - Uses `jsonify()` to return a success message (`200 OK`).\n",
     "<img src=\"{{site.baseurl}}/images/putmethod.PNG\" alt=\"PUT\" class=\"pic\">\n",
     "\n",
-    "### JSON and `jsonify` in This API\n",
-    "- **Receiving JSON**: The API uses `request.get_json()` to parse incoming JSON data from clients.\n",
-    "- **Returning JSON**: Responses are formatted with `jsonify()` to ensure correct JSON formatting.\n",
-    "- **Error Handling**: Errors return JSON objects with error messages and appropriate HTTP status codes.\n",
-    "\n",
-    "### API Endpoints Summary\n",
-    "\n",
-    "| Method | Endpoint | Description |\n",
-    "|--------|----------|-------------|\n",
-    "| `POST` | `/api/userquotes` | Add a new quote (expects JSON data). |\n",
-    "| `GET` | `/api/userquotes` | Retrieve all quotes in JSON format. |\n",
-    "| `DELETE` | `/api/userquotes/<id>` | Delete a specific quote by ID. |\n",
-    "| `PUT` | `/api/userquotes/<id>` | Update a quote by ID (expects JSON data). |\n",
-    "\n",
     "\n",
     "## Backend: Database Model and Initialization\n",
     "\n",
@@ -165,44 +151,74 @@
     "3. Uses `.create()` method to insert them into the database.\n",
     "4. Handles errors like duplicate entries using `IntegrityError`.\n",
     "\n",
-    "## Alignment with AP Computer Science Principles (AP CSP) CollegeBoard Requirements  \n",
     "\n",
-    "The **Quote Manager** feature in StudyBuddy aligns with the **AP Computer Science Principles (AP CSP)** framework by incorporating key computing concepts under the **Big Ideas**:  \n",
+    "# 🚀 Sequencing, Selection, and Iteration in the `Quotes` Class  \n",
     "\n",
-    "### **Big Idea 2: Abstraction**  \n",
-    "- Uses **Flask-SQLAlchemy** to structure and manage quotes in a relational database.  \n",
-    "- Separates frontend and backend logic, enabling modular and scalable code.  \n",
+    "## **Sequencing**\n",
+    "### 🔹 Example from `Quotes` Class:\n",
+    "```python\n",
+    "def create(self):\n",
+    "    try:\n",
+    "        db.session.add(self)  # Step 1: Add the quote to the database\n",
+    "        db.session.commit()   # Step 2: Commit the changes\n",
+    "    except Exception as e:\n",
+    "        db.session.rollback()  # Step 3: Rollback if there's an error\n",
+    "        raise e\n",
+    "@staticmethod\n",
+    "```\n",
     "\n",
-    "### **Big Idea 3: Data & Information**  \n",
-    "- Stores, retrieves, and processes user-generated quotes using a **structured database model**.  \n",
-    "- Implements **JSON formatting** for data transmission between the client and server.  \n",
-    "- Provides database backup, restore, and initialization functionalities.  \n",
+    "## **Sequencing**\n",
+    "### 🔹 Example from `Quotes` Class:\n",
+    "```python\n",
+    "def restore(data):\n",
+    "    for sbuser_data in data:\n",
+    "        author = sbuser_data.get(\"author\", None)\n",
+    "        sbuser = Quotes.query.filter_by(_author=author).first()\n",
     "\n",
-    "### **Big Idea 4: Algorithms & Programming**  \n",
-    "- Implements **CRUD operations** (Create, Read, Update, Delete) using JavaScript functions and a REST API.  \n",
-    "- Uses **loops, conditionals, and functions** to handle UI updates dynamically.  \n",
-    "- Ensures efficient **state management** (e.g., switching between \"add\" and \"edit\" modes).  \n",
+    "        if sbuser:  # Selection: If the quote exists, update it\n",
+    "            sbuser.update(sbuser_data)\n",
+    "        else:       # Otherwise, create a new quote entry\n",
+    "            sbuser = Quotes(**sbuser_data)\n",
+    "            sbuser.update(sbuser_data)\n",
+    "            sbuser.create()\n",
+    "```\n",
     "\n",
-    "### **Big Idea 5: Computer Systems & Networks**  \n",
-    "- Uses **HTTP methods** (`GET`, `POST`, `PUT`, `DELETE`) to interact with the backend API.  \n",
-    "- Implements **server-side processing** with Flask to handle database transactions.  \n",
+    "## **Sequencing**\n",
+    "### 🔹 Example from `Quotes` Class:\n",
+    "```python\n",
+    "@staticmethod\n",
+    "def restore(data):\n",
+    "    for sbuser_data in data:  # Iterating through each quote in the data\n",
+    "        author = sbuser_data.get(\"author\", None)\n",
+    "        sbuser = Quotes.query.filter_by(_author=author).first()\n",
     "\n",
-    "### **Big Idea 6: Impact of Computing**  \n",
-    "- Enhances the user experience by providing an **interactive and organized** platform for managing quotes.  \n",
-    "- Implements **error handling** and validation to improve data integrity and usability.  \n",
-    "- Demonstrates how software can support education and personal organization.  \n",
+    "        if sbuser:\n",
+    "            sbuser.update(sbuser_data)\n",
+    "        else:\n",
+    "            sbuser = Quotes(**sbuser_data)\n",
+    "            sbuser.update(sbuser_data)\n",
+    "            sbuser.create()\n",
+    "```\n",
     "\n",
-    "### **Create Performance Task Readiness**  \n",
-    "- Showcases **program development, functionality, and data management**, fulfilling AP CSP’s **Create Task** requirements.  \n",
-    "- Demonstrates how computing enhances productivity and learning through an interactive web application.  \n",
+    "## 🎯 How This Connects to CollegeBoard AP CSP Big Idea 1 (Creative Development)\n",
+    "### 🔹 Big Idea 1: Creative Development focuses on:\n",
+    "✔️ The design and implementation of programs.\n",
+    "✔️ Using sequencing, selection, and iteration to develop functional solutions.\n",
+    "✔️ Collaboration and problem-solving through structured programming.\n",
     "\n",
+    "### 🔹 How the Quotes Class Fulfills Big Idea 1:\n",
+    "#### Creative Development\n",
     "\n",
+    "The restore() function is designed to efficiently process multiple quotes while avoiding duplicates.\n",
+    "Uses logical selection (if-else) and iteration (loops) to manage database operations.\n",
     "\n",
-    "### Data creation and Data recovery\n",
-    "I am able to run db_init, db_restore, db_backup to initialize, backup, and restore my database table.\n",
-    "<img src=\"{{site.baseurl}}/images/db_init.PNG\" alt=\"init\" class=\"pic\">\n",
-    "<img src=\"{{site.baseurl}}/images/db_backup.PNG\" alt=\"backup\" class=\"pic\">\n",
-    "<img src=\"{{site.baseurl}}/images/db_restore.PNG\" alt=\"restore\" class=\"pic\">\n"
+    "#### Algorithm Design\n",
+    "- The combination of sequencing, selection, and iteration ensures smooth execution.\n",
+    "- The if condition prevents duplicate entries, making the program efficient.\n",
+    "\n",
+    "#### Data Processing\n",
+    "- The loop iterates over a dataset of quotes, making the function scalable.\n",
+    "- The selection logic ensures that only necessary updates are made.\n"
    ]
   }
  ],
