fix quotes class explanation

--- a/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
+++ b/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
@@ -167,7 +167,7 @@
     "@staticmethod\n",
     "```\n",
     "\n",
-    "## **Sequencing**\n",
+    "## **Selection**\n",
     "### 🔹 Example from `Quotes` Class:\n",
     "```python\n",
     "def restore(data):\n",
@@ -183,7 +183,7 @@
     "            sbuser.create()\n",
     "```\n",
     "\n",
-    "## **Sequencing**\n",
+    "## **Iteration**\n",
     "### 🔹 Example from `Quotes` Class:\n",
     "```python\n",
     "@staticmethod\n",
