--- a/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
+++ b/_notebooks/Foundation/2025-01-24-DatabaseFeatureblog.ipynb
@@ -209,8 +209,8 @@
     "### 🔹 How the Quotes Class Fulfills Big Idea 1:\n",
     "#### Creative Development\n",
     "\n",
-    "The restore() function is designed to efficiently process multiple quotes while avoiding duplicates.\n",
-    "Uses logical selection (if-else) and iteration (loops) to manage database operations.\n",
+    "- The restore() function is designed to efficiently process multiple quotes while avoiding duplicates.\n",
+    "- Uses logical selection (if-else) and iteration (loops) to manage database operations.\n",
     "\n",
     "#### Algorithm Design\n",
     "- The combination of sequencing, selection, and iteration ensures smooth execution.\n",
