updating final blogs

--- a/_notebooks/Foundation/finaltri2/2025-03-02-featureblogtri2.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-03-02-featureblogtri2.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "---\n",
@@ -112,11 +112,29 @@
     "\n",
     "### Procedural Abstraction (AAP-3.B) - **Big Idea: Algorithms and Programming | Topic: Procedural Abstraction**\n",
     "\n",
-    "Functions such as `fetchQuotes()`, `addQuote()`, and `deleteQuote()` encapsulate specific behaviors, reducing code redundancy and improving maintainability.\n",
+    "Functions such as `fetchNotes()`, `addNote()`, and `deleteNote()` encapsulate specific behaviors, reducing code redundancy and improving maintainability.\n",
     "\n",
     "## Conclusion\n",
     "\n",
-    "The Notes Manager application demonstrates key computing principles, including data abstraction, procedural design, algorithmic logic, and iterative development. By following the AP CSP guidelines, this project highlights the real-world application of computer science in enhancing productivity and organization.\n"
+    "The Notes Manager application demonstrates key computing principles, including data abstraction, procedural design, algorithmic logic, and iterative development. By following the AP CSP guidelines, this project highlights the real-world application of computer science in enhancing productivity and organization.\n",
+    "\n",
+    "Self Grade:\n",
+    "# Self-Evaluation: Notes Manager Project\n",
+    "\n",
+    "| Evaluation Criteria                         | Comments                                                | Grade (out of 1) |\n",
+    "|---------------------------------------------|---------------------------------------------------------|------------------|\n",
+    "| **Program Purpose and Function**            | Clearly defined purpose; effectively manages notes.     | 1.00            |\n",
+    "| **User Interface Design**                   | Clean, intuitive, and aesthetically pleasing.           | 1.00            |\n",
+    "| **Code Documentation and Readability**      | Well-commented, but some functions could be clearer.    | 0.85            |\n",
+    "| **Algorithm Efficiency**                    | Uses simple and effective logic but lacks optimization. | 0.80            |\n",
+    "| **Data Management and Abstraction**         | Good use of SQLAlchemy, but improvements possible.      | 0.90            |\n",
+    "| **Error Handling and Debugging**            | Covers common errors and now includes better validation.| 0.90            |\n",
+    "| **Testing and Reliability**                 | Functional testing done, but no automated tests.        | 0.85            |\n",
+    "| **Security and Authentication**             | JWT-based auth is implemented well.                     | 0.95            |\n",
+    "| **Scalability and Maintainability**         | Structured well, but search could be optimized.         | 0.85            |\n",
+    "| **Innovation and Creativity**               | Practical implementation, but could add more features.  | 0.90            |\n",
+    "| **Average Score**                           | Improved in UI and error handling, making it stronger.  | **0.905**       |\n",
+    "\n"
    ]
   }
  ],
