added pictures to NatM blog

--- a/_notebooks/Foundation/finaltri2/2025-02-27-NightattheMuseum.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-02-27-NightattheMuseum.ipynb
@@ -144,7 +144,11 @@
     "\n",
     "---\n",
     "\n",
-    "Overall, each project had unique strengths and areas that could be improved. **Legendary Motorsports** stood out for its polished design and functionality, while **Prism** and **TeamTeachToolKit** provided engaging social and educational experiences. **Scribble**, while fun, needed improvements in its scoring system to ensure fair play. Each project demonstrated creativity and innovation, with clear potential for further enhancement.  \n"
+    "Overall, each project had unique strengths and areas that could be improved. **Legendary Motorsports** stood out for its polished design and functionality, while **Prism** and **TeamTeachToolKit** provided engaging social and educational experiences. **Scribble**, while fun, needed improvements in its scoring system to ensure fair play. Each project demonstrated creativity and innovation, with clear potential for further enhancement.  \n",
+    "\n",
+    "<img src=\"{{site.baseurl}}/images/natm1.jpg\" alt=\"N@tM pic\" class=\"pic\">\n",
+    "<img src=\"{{site.baseurl}}/images/natm2.jpg\" alt=\"N@tM pic\" class=\"pic\">\n",
+    "<img src=\"{{site.baseurl}}/images/natm3.jpg\" alt=\"N@tM pic\" class=\"pic\">\n"
    ]
   }
  ],
