--- a/_notebooks/Foundation/finaltri2/2025-03-02-finalreflection.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-03-02-finalreflection.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "---\n",
@@ -26,10 +26,10 @@
     "|----------|----------------|--------------|-------|\n",
     "| 5 Things Over 12 Weeks (Issues, Burndown, Blog) | 5 | 4.31 | Missed some details in burndown tracking and being more specific, but overall solid work. |\n",
     "| Full Stack Project Demo (CPT Highlights & N@tM Feedback) | 2 | 1.8 | Demo covers key aspects but isn't very complex. |\n",
-    "| Project Feature Blog (CPT/FRQ Language) | 1 | 0.9 | Good structure, but could be clearer in connecting to CPT/FRQ. |\n",
+    "| Project Feature Blog (CPT/FRQ Language) | 1 | 0.91 | Good structure, but could be clearer in connecting to CPT/FRQ, more explanation. |\n",
     "| MCQ | 1 | 0.89 | Score wasn't that great but did a decent job when evaluating the skills that I needed to work on. |\n",
     "| Retrospective (Extra point) | 1 | 0.9 | Showed interest in other projects, but next steps plan needs more detail. |\n",
-    "| **Total** | **10** | **9.1** | Solid effort with minor areas for improvement. |\n",
+    "| **Total** | **10** | **9.2** | Solid effort with minor areas for improvement. |\n",
     "\n"
    ]
   }
