--- a/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
@@ -118,8 +118,8 @@
     "- No more than 30MB in file size\n",
     "\n",
     "\n",
-    "<video width=\"600\" controls>\n",
-    "  <source src=\"videos/tri2cptvid.mp4\" type=\"video/mp4\">\n",
+    "<video width=\"700\" controls>\n",
+    "  <source src=\"{{site.baseurl}}videos/tri2cptvid.mp4\" type=\"video/mp4\">\n",
     "</video>\n"
    ]
   },
