--- a/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "\n",
     "<video width=\"700\" controls>\n",
-    "  <source src=\"{{site.baseurl}}videos/tri2cptvid.mp4\" type=\"video/mp4\">\n",
+    "  <source src=\"{{site.baseurl}}/videos/tri2cptvid.mp4\" type=\"video/mp4\">\n",
     "</video>\n"
    ]
   },
