fixing procedure ii.

--- a/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
@@ -174,19 +174,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@userquotes.route('/api/userquotes/<int:id>', methods=['PUT'])\n",
-    "def update_quote_api(id):\n",
-    "    data = request.get_json()\n",
-    "    author = data.get('author')\n",
-    "    quote = data.get('quote')\n",
-    "    date = data.get('date')\n",
+    "function editQuote(id, currentAuthor, currentQuote, currentDate) {\n",
+    "    // Display the edit form and hide the add form\n",
+    "    document.getElementById('quote-edit-form').style.display = 'block';\n",
+    "    document.getElementById('quote-form').style.display = 'none'; // Hide the Add form\n",
     "\n",
-    "    if not all([author, quote, date]):  # Selection\n",
-    "        return jsonify({'error': 'Missing data'}), 400\n",
+    "    // Set placeholder values to the current quote details\n",
+    "    document.getElementById('edit-author').placeholder = currentAuthor;\n",
+    "    document.getElementById('edit-quote').placeholder = currentQuote;\n",
+    "    document.getElementById('edit-date').placeholder = currentDate;\n",
     "\n",
-    "    # Calling the student-developed procedure\n",
-    "    result = update_quote(id, author, quote, date)\n",
-    "    return jsonify(result), 200"
+    "    // Clear input fields to allow user entry\n",
+    "    document.getElementById('edit-author').value = \"\";\n",
+    "    document.getElementById('edit-quote').value = \"\";\n",
+    "    document.getElementById('edit-date').value = \"\";\n",
+    "\n",
+    "    // When the form is submitted, send a PUT request to update the quote\n",
+    "    const form = document.getElementById('edit-quote-form');\n",
+    "    form.onsubmit = async function(event) {\n",
+    "        event.preventDefault(); // Prevents default form submission behavior\n",
+    "\n",
+    "        // Get user input; if fields are empty, keep the previous values\n",
+    "        const author = document.getElementById('edit-author').value || currentAuthor;\n",
+    "        const quote = document.getElementById('edit-quote').value || currentQuote;\n",
+    "        const date = document.getElementById('edit-date').value || currentDate;\n",
+    "\n",
+    "        // Send a PUT request to update the quote in the backend\n",
+    "        const response = await fetch(`${API_URL}/${id}`, { // Calls the backend update_quote function\n",
+    "            method: 'PUT', // Specifies that this request is an update operation\n",
+    "            headers: {\n",
+    "                'Content-Type': 'application/json', // Informs the backend that JSON data is being sent\n",
+    "            },\n",
+    "            body: JSON.stringify({ author, quote, date }), // Sends the updated quote data to the backend\n",
+    "        });\n",
+    "\n",
+    "\n",
+    "        // Handle the response\n",
+    "        if (response.ok) {\n",
+    "            alert('Notes updated successfully!'); // Notify user of success\n",
+    "            fetchQuotes(); // Refresh the displayed notes\n",
+    "            cancelEdit(); // Hide the edit form and show the add form again\n",
+    "        } else {\n",
+    "            alert('Failed to update notes.'); // Notify user of failure\n",
+    "        }\n",
+    "    };\n",
+    "}\n",
+    "="
    ]
   },
   {
