clearing up blog

--- a/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
@@ -129,6 +129,10 @@
    "source": [
     "## Component C: PERSONALIZED PROJECT REFERENCE (PPR)\n",
     "### Student-Developed Procedure\n",
+    "**Procedure**: Capture and paste two program code segments you developed\n",
+    "during the administration of this task that contain a student-developed\n",
+    "procedure that implements an algorithm used in your program and a call to\n",
+    "that procedure.\n",
     "#### Segment 1: Procedure Definition (with sequencing, selection)"
    ]
   },
@@ -227,6 +231,9 @@
    "metadata": {},
    "source": [
     "### List Usage for Managing Complexity\n",
+    "**List**: Capture and paste two program code segments you developed during\n",
+    "the administration of this task that contain a list (or other collection type)\n",
+    "being used to manage complexity in your program.\n",
     "#### Segment 3: Storing Data in a List"
    ]
   },
